
4. CHanged DWB to MPPI controller. Path following is much better and the robot backs up

2/21/24:

1. Changed PreferForwardCritic to be false, and set threshold to stop preferring forward to be 1 meter

2. Increased LiDAR correct_goal() padding to 0.5 from 0.25 

3. Updated controller_server to have multiple controller plugins. These can be selected in the behavior tree

4. Nav2 takes long time to fully initialize now after MPPI controller was added in

5. Used NavFn planner with MPPI controller and set prefer forward critic to true and stop preferring for distances over 2 meters from robot. Robot does a backup more consistently now and does not switch directions when it doesnt have to

6. Set ackermann constraint min_turning_r to 0.35 from 0.2 m based on URDF

2/24/24:

1. Built new chassis

2. URDF updated to match new chassis

3. Increased time to start publishing for search targets since I cannot find a way to delay it after everything is running (10->30 seconds)

3/4/24:

1. New upgrades to chassis

2. URDF re-updated

3. Costmap footprint updated

4. Using SmacHybrid planner, Constrained smoother, and MPPI controller to get best navigation

5. Increased wait time to 60 seconds in search_targets()

3/5/24:

1. Tested out for CDR. Serial side had some issues with buffer that stopped execution but once that was fixed it was all fine

2. Another encoder is bugging -> bad connection on protoboard (I think). Now the left and right are lb and rf encoder values respectively

3. Got first video for integration and searching 

4. Messed up commit tree because I was trying to push large files into repository

3/6/24:

1. Fixed commit tree 

2. Made target_pub separate with keyboard input on which target to track.

3. Tuned nav2pose threshold values for considering new goal to publish (AND becomes OR because we want to publish when EITHER x OR y change beyond a value

4. Tuned search behavior node to delay 30 seconds before starting up for nav