@@ -6,8 +6,8 @@ COLCON_PREFIX_PATH=/home/adam/Desktop/sdp-team-12/navphy_ws/install:/home/adam/D
 COLORTERM=truecolor
 DBUS_SESSION_BUS_ADDRESS=unix:path=/run/user/1000/bus
 DISPLAY=:10.0
-GNOME_TERMINAL_SCREEN=/org/gnome/Terminal/screen/1d7e3cf3_a385_4a1d_896f_51ea687a94c3
-GNOME_TERMINAL_SERVICE=:1.128
+GNOME_TERMINAL_SCREEN=/org/gnome/Terminal/screen/0c09adbe_0caa_4186_b057_f898815446e0
+GNOME_TERMINAL_SERVICE=:1.119
 GTK_IM_MODULE=ibus
 GTK_MODULES=gail:atk-bridge
 HOME=/home/adam
@@ -28,11 +28,11 @@ ROS_DISTRO=humble
 ROS_LOCALHOST_ONLY=0
 ROS_PYTHON_VERSION=3
 ROS_VERSION=2
-SESSION_MANAGER=local/adam-Latitude-5520:@/tmp/.ICE-unix/4676,unix/adam-Latitude-5520:/tmp/.ICE-unix/4676
+SESSION_MANAGER=local/adam-Latitude-5520:@/tmp/.ICE-unix/228216,unix/adam-Latitude-5520:/tmp/.ICE-unix/228216
 SHELL=/bin/bash
 SHLVL=1
-SSH_AGENT_PID=4658
-SSH_AUTH_SOCK=/tmp/ssh-XXXXXX87T25A/agent.4579
+SSH_AGENT_PID=228198
+SSH_AUTH_SOCK=/tmp/ssh-XXXXXXZ1qjkM/agent.228119
 TERM=xterm-256color
 UID=1000
 USER=adam
@@ -40,7 +40,7 @@ VTE_VERSION=6800
 XDG_DATA_DIRS=/usr/share/gnome:/usr/local/share:/usr/share:/var/lib/snapd/desktop
 XDG_RUNTIME_DIR=/run/user/1000
 XDG_SESSION_CLASS=user
-XDG_SESSION_ID=c4
+XDG_SESSION_ID=c11
 XDG_SESSION_TYPE=x11
 XMODIFIERS=@im=ibus
 XRDP_PULSE_SINK_SOCKET=xrdp_chansrv_audio_out_socket_10
