@@ -207,11 +207,11 @@ controller_server:
       batch_size: 2000
       vx_std: 0.2
       vy_std: 0.2
-      wz_std: 0.4
-      vx_max: 0.5
-      vx_min: -0.35
-      vy_max: 0.5
-      wz_max: 2.0
+      wz_std: 0.2
+      vx_max: 0.3
+      vx_min: -0.3
+      vy_max: 0.3
+      wz_max: 0.3
       iteration_count: 1
       enforce_path_inversion: false
       prune_distance: 1.5
